add_subdirectory(dot_product_multifunct_call_test_perf)
add_subdirectory(dot_product_single_funct_call_32_test_perf)
add_subdirectory(dot_product_single_funct_call_all_test_perf)
add_subdirectory(scalar_vect_mult_multifunct_call_test_perf)
add_subdirectory(scalar_vect_mult_single_funct_call_32_test_perf)
add_subdirectory(scalar_vect_mult_single_funct_call_all_test_perf)
add_subdirectory(vect_sum_multifunct_call_test_perf)
add_subdirectory(vect_sum_single_funct_call_32_test_perf)
add_subdirectory(vect_sum_single_funct_call_all_test_perf)

