add_subdirectory(KADDV32_test)
add_subdirectory(KDOTP32_test)
add_subdirectory(KSVMUL32_test)
add_subdirectory(KADDV_test)
add_subdirectory(KADDVU_test)
add_subdirectory(KSUBV_test)
add_subdirectory(KDOTP_test)
add_subdirectory(KSVMUL_test)
add_subdirectory(dot_product_multifunct_call_test_perf)
add_subdirectory(scalar_vect_mult_multifunct_call_test_perf)
add_subdirectory(vect_sum_multifunct_call_test_perf)

