add_subdirectory(KADDV_test)
add_subdirectory(KADDVU_test)
add_subdirectory(KSUBV_test)
add_subdirectory(KDOTP_test)
add_subdirectory(KDOTPPS_test)
add_subdirectory(KRELU_test)
add_subdirectory(KSVADDRF_test)
add_subdirectory(KSVMULRF_test)
add_subdirectory(KSVADDSC_test)
add_subdirectory(KSVMULSC_test)
add_subdirectory(KSRAV_test)
add_subdirectory(KSRLV_test)
add_subdirectory(KBCAST_test)
add_subdirectory(KVCP_test)
add_subdirectory(KVMUL_test)
add_subdirectory(KVRED_test)
add_subdirectory(convolution_test)
add_subdirectory(dot_product_multifunct_call_test_perf)
add_subdirectory(scalar_vect_mult_multifunct_call_test_perf)
add_subdirectory(vect_sum_multifunct_call_test_perf)

