add_subdirectory(convolution_test_single_spmu_subkernels_decoupled)
add_subdirectory(convolution_test_single_spmu_subkernels_loosely_coupled)
add_subdirectory(convolution_test_single_spmu_zeropadded_decoupled)
add_subdirectory(convolution_test_multi_spmu_subkernels_decoupled)
add_subdirectory(convolution_test_multi_spmu_subkernels_loosely_coupled)
add_subdirectory(convolution_test_multi_spmu_zeropadded_decoupled)
add_subdirectory(convolution_test_no_accl_subkernels_decoupled)
add_subdirectory(convolution_test_no_accl_subkernels_loosely_coupled)
add_subdirectory(convolution_test_no_accl_zeropadded_decoupled)
add_subdirectory(convolution_test_no_accl_zeropadded_loosely_coupled)
add_subdirectory(convolution_test_riscy_subkernels)
add_subdirectory(convolution_test_riscy_zeropadded)
